---------------------------
openurl.library - ChangeLog
---------------------------

$Id$
$URL$

#### v7.5 RELEASE ##############################################################

2009-05-30  Jens Langner <Jens.Langner@light-speed.de>

  * misc: final 7.5 release preparations

2009-05-28  Jens Langner <Jens.Langner@light-speed.de>

  * prefs/app.c: removed the not required AboutMUI method as calling
    MUIM_Application_AboutMUI should really be enough. This should also solve
    the previously existing problems with the AROS compiles.
  * library/applist.c: instead of always returning 0 in mListCheckSave() for
    AROS we now check if the returned pointer of xget(MUIA_List_Format) is
    NULL or not and thus perform the string compare operation or not. This
    should also catch the case where AROS is failing for the MUIA_List_Format
    get operation.

2009-05-28  Matthias Rustler <mrustler@gmx.de>

  * German catalog sync'd with "FlexCat .. newctfile ..." and updated.
  * Build German catalog with AROS metamakefile.
  * Copying of icon with AROS metamakefiles
  * Metamakefiles cleaned up
  * Overloading of MUIM_Application_AboutMUI disabled on AROS
    because it crashes when closing the about window.
  * Remaining warnings under AROS removed

2009-05-27  Matthias Rustler <mrustler@gmx.de>

  * AROS metamakefiles added
  * applist.c: fix for a segfault on AROS because MUIA_List_Format
    isn't get-able in Zune.
  * 64-bit fixes (IPTR, STACKED, UL)

2009-05-26  Jens Langner <Jens.Langner@light-speed.de>

  * include: updated the mui includes to use "muiaros.h" instead of "mui.h"
    for an AROS compile. Otherwise the binaries won't work, I am afraid.
    In addition a little cleanup in the include directory has been performed.
  
2009-05-25  Jens Langner <Jens.Langner@light-speed.de>

  * misc: fixed all remaining compiler warnings when compiling for AROS.

2009-05-24  Alexandre Balaban <alexandre@balaban.fr>
