@@ -24,6 +24,9 @@
 #include "mailers.h"
 #include "gui_global.h"
 #include "OpenURL.h"
+#include "macros.h"
+
+#include <libraries/openurl.h>
 
 #include <classes/window.h>
 
@@ -48,13 +51,14 @@ extern Object *edit_ftp_win;
 
 CONST_STRPTR hidden_strings[] =
 {
-    "string 1",
-    "string 2",
-    "string 3",
-    "string 4",
+    "this popup",
+    "is not yet",
+    "functional",
+    "sorry :-/",
      NULL
 };
 
+/// HandleInput_Main_Win
 BOOL HandleInput_Main_Win(void)
 {
     uint32 result      = 0;
@@ -75,8 +79,22 @@ BOOL HandleInput_Main_Win(void)
                     {
                         uint32 retval = 0;
                         IIntuition->GetAttr( LISTBROWSER_RelEvent, OBJ(OBJ_LBROWSER_BROW), &retval );
-                        if (retval != LBRE_DOUBLECLICK) break;
-                        IDOS->Printf("retval == LBRE_DOUBLECLICK\n");
+                        switch(retval)
+                        {
+                            case LBRE_CHECKED:
+                            case LBRE_UNCHECKED:
+                            {
+                                struct URL_BrowserNode * bn = NULL;
+                                IIntuition->GetAttr( LISTBROWSER_SelectedNode, OBJ(OBJ_LBROWSER_BROW), (ULONG*) &bn );
+                                if (retval == LBRE_UNCHECKED)
+                                    SET_FLAG(bn->ubn_Flags,UNF_DISABLED);
+                                else
+                                    CLEAR_FLAG(bn->ubn_Flags,UNF_DISABLED);
+                            }
+                        }
+                        if (retval != LBRE_DOUBLECLICK)break;
+                        // we deliberately go on executing following case OBJ_EDIT_BROW
+                        // because a double click mean the same as clicking edit button
                     }
                     case OBJ_EDIT_BROW:
                     {
@@ -90,8 +108,22 @@ BOOL HandleInput_Main_Win(void)
                     {
                         uint32 retval = 0;
                         IIntuition->GetAttr( LISTBROWSER_RelEvent, OBJ(OBJ_LBROWSER_MAIL), &retval );
+                        switch(retval)
+                        {
+                            case LBRE_CHECKED:
+                            case LBRE_UNCHECKED:
+                            {
+                                struct URL_MailerNode * mn = NULL;
+                                IIntuition->GetAttr( LISTBROWSER_SelectedNode, OBJ(OBJ_LBROWSER_MAIL), (ULONG*) &mn );
+                                if (retval == LBRE_UNCHECKED)
+                                    SET_FLAG(mn->umn_Flags,UNF_DISABLED);
+                                else
+                                    CLEAR_FLAG(mn->umn_Flags,UNF_DISABLED);
+                            }
+                        }
                         if (retval != LBRE_DOUBLECLICK) break;
-                        IDOS->Printf("retval == LBRE_DOUBLECLICK\n");
+                        // we deliberately go on executing following case OBJ_EDIT_MAIL
+                        // because a double click mean the same as clicking edit button
                     }
                     case OBJ_EDIT_MAIL:
                     {
@@ -105,8 +137,22 @@ BOOL HandleInput_Main_Win(void)
                     {
                         uint32 retval = 0;
                         IIntuition->GetAttr( LISTBROWSER_RelEvent, OBJ(OBJ_LBROWSER_FTP), &retval );
+                        switch(retval)
+                        {
+                            case LBRE_CHECKED:
+                            case LBRE_UNCHECKED:
+                            {
+                                struct URL_FTPNode * fn = NULL;
+                                IIntuition->GetAttr( LISTBROWSER_SelectedNode, OBJ(OBJ_LBROWSER_FTP), (ULONG*) &fn );
+                                if (retval == LBRE_UNCHECKED)
+                                    SET_FLAG(fn->ufn_Flags,UNF_DISABLED);
+                                else
+                                    CLEAR_FLAG(fn->ufn_Flags,UNF_DISABLED);
+                            }
+                        }
                         if (retval != LBRE_DOUBLECLICK) break;
-                        IDOS->Printf("retval == LBRE_DOUBLECLICK\n");
+                        // we deliberately go on executing following case OBJ_EDIT_FTP
+                        //  because a double click mean the same as clicking edit button
                     }
                     case OBJ_EDIT_FTP:
                     {
@@ -120,6 +166,8 @@ BOOL HandleInput_Main_Win(void)
                     case OBJ_SAVE:
                     case OBJ_APPLY:
                         storePrefs((result & WMHI_GADGETMASK)==OBJ_SAVE);
+                        if((result & WMHI_GADGETMASK)!=OBJ_APPLY)
+                            done=TRUE;
                         break;
                     case OBJ_CANCEL:
                         done=TRUE;
@@ -154,7 +202,9 @@ BOOL HandleInput_Main_Win(void)
     }
     return (done);
 }
+///
 
+/// HandleInput_Edit_Brow_Win
 void HandleInput_Edit_Brow_Win()
 {
     uint32 result      = 0;
@@ -171,16 +221,35 @@ void HandleInput_Edit_Brow_Win()
             case WMHI_GADGETUP:
                 switch (result & WMHI_GADGETMASK)
                 {
+                    case OBJ_BROW_USE:
+                        IIntuition->SetGadgetAttrs(GAD(OBJ_LBROWSER_BROW), window, NULL, LISTBROWSER_Labels, ~0, TAG_DONE);
+                        updateBrowserNode();
+                        IIntuition->SetGadgetAttrs(GAD(OBJ_LBROWSER_BROW), window, NULL, LISTBROWSER_Labels, &list_Brow, LISTBROWSER_AutoFit, TRUE, TAG_DONE);
+                    case OBJ_BROW_CANCEL:
+                        RA_CloseWindow(edit_brow_win);
+                        edit_brow_window = NULL;
+                        break;
                     case OBJ_BROW_PATH_GET:
                         if (gfRequestFile(OBJ(OBJ_BROW_PATH_GET), edit_brow_window))
                         {
                         }
                         break;
                     case OBJ_BROW_PATH_CHOOSE:  // set Attrs according to the button clicked on.
-                    case OBJ_BROW_AREXX_CHOOSE:
                     case OBJ_BROW_OPEN_CHOOSE:
                     case OBJ_BROW_NEW_CHOOSE:
 
+                        IIntuition->SetAttrs( OBJ(OBJ_HIDDEN_CHOOSER),
+
+                    //  NULL-terminated array of strings
+                            CHOOSER_LabelArray, hidden_strings, TAG_DONE);
+
+                    //  or an Exec List of labels (built from open ARexx ports ?)
+                    //        CHOOSER_Labels, &chooserlist, TAG_DONE);
+
+                        IIntuition->ActivateGadget(GAD(OBJ_HIDDEN_CHOOSER),
+                                                   edit_brow_window, NULL);
+                        break;
+                    case OBJ_BROW_AREXX_CHOOSE:
                         IIntuition->SetAttrs( OBJ(OBJ_HIDDEN_CHOOSER),
 
                     //  NULL-terminated array of strings
@@ -196,8 +265,9 @@ void HandleInput_Edit_Brow_Win()
         }
     }
 }
+///
 
-
+/// HandleInput_Edit_Mail_Win
 void HandleInput_Edit_Mail_Win()
 {
     uint32 result      = 0;
@@ -214,17 +284,52 @@ void HandleInput_Edit_Mail_Win()
             case WMHI_GADGETUP:
                 switch (result & WMHI_GADGETMASK)
                 {
+                    case OBJ_MAIL_USE:
+                        IIntuition->SetGadgetAttrs(GAD(OBJ_LBROWSER_MAIL), window, NULL, LISTBROWSER_Labels, ~0, TAG_DONE);
+                        updateMailerNode();
+                        IIntuition->SetGadgetAttrs(GAD(OBJ_LBROWSER_MAIL), window, NULL, LISTBROWSER_Labels, &list_Mail, LISTBROWSER_AutoFit, TRUE, TAG_DONE);
+                    case OBJ_MAIL_CANCEL:
+                        RA_CloseWindow(edit_mail_win);
+                        edit_mail_window = NULL;
+                        break;
                     case OBJ_MAIL_PATH_GET:
                         if (gfRequestFile(OBJ(OBJ_MAIL_PATH_GET), edit_mail_window))
                         {
                         }
                         break;
+                    case OBJ_MAIL_PATH_CHOOSE:  // set Attrs according to the button clicked on.
+                    case OBJ_MAIL_WRITE_CHOOSE:
+
+                        IIntuition->SetAttrs( OBJ(OBJ_HIDDEN_CHOOSER),
+
+                    //  NULL-terminated array of strings
+                            CHOOSER_LabelArray, hidden_strings, TAG_DONE);
+
+                    //  or an Exec List of labels (built from open ARexx ports ?)
+                    //        CHOOSER_Labels, &chooserlist, TAG_DONE);
+
+                        IIntuition->ActivateGadget(GAD(OBJ_HIDDEN_CHOOSER),
+                                                   edit_mail_window, NULL);
+                        break;
+                    case OBJ_MAIL_AREXX_CHOOSE:
+                        IIntuition->SetAttrs( OBJ(OBJ_HIDDEN_CHOOSER),
+
+                    //  NULL-terminated array of strings
+                            CHOOSER_LabelArray, hidden_strings, TAG_DONE);
+
+                    //  or an Exec List of labels (built from open ARexx ports ?)
+                    //        CHOOSER_Labels, &chooserlist, TAG_DONE);
+
+                        IIntuition->ActivateGadget(GAD(OBJ_HIDDEN_CHOOSER),
+                                                   edit_mail_window, NULL);
+                        break;
                 }
         }
     }
 }
+///
 
-
+/// HandleInput_Edit_FTP_Win
 void HandleInput_Edit_FTP_Win()
 {
     uint32 result      = 0;
@@ -241,13 +346,48 @@ void HandleInput_Edit_FTP_Win()
             case WMHI_GADGETUP:
                 switch (result & WMHI_GADGETMASK)
                 {
+                    case OBJ_FTP_USE:
+                        IIntuition->SetGadgetAttrs(GAD(OBJ_LBROWSER_BROW), window, NULL, LISTBROWSER_Labels, ~0, TAG_DONE);
+                        updateFTPNode();
+                        IIntuition->SetGadgetAttrs(GAD(OBJ_LBROWSER_BROW), window, NULL, LISTBROWSER_Labels, &list_FTPs, LISTBROWSER_AutoFit, TRUE, TAG_DONE);
+                    case OBJ_FTP_CANCEL:
+                        RA_CloseWindow(edit_ftp_win);
+                        edit_brow_window = NULL;
+                        break;
                     case OBJ_FTP_PATH_GET:
                         if (gfRequestFile(OBJ(OBJ_FTP_PATH_GET), edit_ftp_window))
                         {
                         }
                         break;
+                    case OBJ_FTP_PATH_CHOOSE:  // set Attrs according to the button clicked on.
+                    case OBJ_FTP_OPEN_CHOOSE:
+                    case OBJ_FTP_NEW_CHOOSE:
+
+                        IIntuition->SetAttrs( OBJ(OBJ_HIDDEN_CHOOSER),
+
+                    //  NULL-terminated array of strings
+                            CHOOSER_LabelArray, hidden_strings, TAG_DONE);
+
+                    //  or an Exec List of labels (built from open ARexx ports ?)
+                    //        CHOOSER_Labels, &chooserlist, TAG_DONE);
+
+                        IIntuition->ActivateGadget(GAD(OBJ_HIDDEN_CHOOSER),
+                                                   edit_ftp_window, NULL);
+                        break;
+                    case OBJ_FTP_AREXX_CHOOSE:
+                        IIntuition->SetAttrs( OBJ(OBJ_HIDDEN_CHOOSER),
+
+                    //  NULL-terminated array of strings
+                            CHOOSER_LabelArray, hidden_strings, TAG_DONE);
+
+                    //  or an Exec List of labels (built from open ARexx ports ?)
+                    //        CHOOSER_Labels, &chooserlist, TAG_DONE);
+
+                        IIntuition->ActivateGadget(GAD(OBJ_HIDDEN_CHOOSER),
+                                                   edit_ftp_window, NULL);
+                        break;
                 }
         }
     }
 }
-
+///
